# weaviate_course

./: README.md  docker-compose.yml  pyproject.toml
weaviate_course/: course_1.py  course_10.py  course_11.py  course_12.py  course_13.py  course_14.py  course_15.py  course_16.py  course_2.py  course_3.py  course_4.py  course_5.py  course_6.py  course_7.py  course_8.py  course_9.py
